patches/argocd-namespace.yaml
# Namespace pro ArgoCD
# - oddělení od ostatních aplikací
# - přehlednost
# - snadné odstranění celé instalace
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
